// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel 1`] = `
<styled.div
  id="dtpanel-groups"
>
  Mock Child
  <Connect(DetailWrapper)
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Users"
      userHasUpdatePermission={true}
    />
    <_class
      contains="users"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="outboundIdentifierLists"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="reasonLists"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-groups"
>
  <React.Fragment>
    <Detail
      label="Name"
      value="mockName"
    />
    <Detail
      label="Description"
      value="mockDescription"
    />
    <Detail
      label="Status"
      value="Enabled"
    />
  </React.Fragment>
  <Connect(DetailWrapper)
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Users"
      userHasUpdatePermission={false}
    />
    <_class
      contains="users"
      items={Array []}
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="outboundIdentifierLists"
      items={Array []}
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={false}
    />
    <_class
      contains="reasonLists"
      items={Array []}
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel with status disabled 1`] = `
<styled.div
  id="dtpanel-groups"
>
  Mock Child
  <Connect(DetailWrapper)
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Users"
      userHasUpdatePermission={true}
    />
    <_class
      contains="users"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="outboundIdentifierLists"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="reasonLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Presence Reason Lists"
      userHasUpdatePermission={true}
    />
    <_class
      contains="reasonLists"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;
